--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,25 +10,25 @@ html {
 
 body {
   width: 70%;
+  min-width: 800px;
   margin: 0 auto;
 }
 
 /* || typography */
 
 h1, h2, h3 {
-  font-family: 'Sonsie One', cursive;
+  font-family: 'Cinzel Decorative', cursive;
   color: #2a2a2a;
 }
 
 p, input, li {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   color: #2a2a2a;
 }
 
 h1 {
   font-size: 4rem;
   text-align: center;
-  color: white;
   text-shadow: 2px 2px 10px black;
 }
 
@@ -46,19 +46,17 @@ p, li {
   line-height: 1.5;
 }
 
-/* || header layout */
+/* || header layout HERE*/
 
 nav, article, aside, footer {
-  background-color: white;
+  background-color: rgba(0,255,0,0.5);
   padding: 1%;
 }
 
 nav {
   height: 50px;
-  background-color: #ff80ff;
   display: flex;
-  width: 100%;
-  margin-bottom: 10px;
+  flex: 100%;
 }
 
 nav ul {
@@ -73,39 +71,17 @@ nav li {
   text-align: center;
   flex: 1;
 }
-
-nav a {
+/*HERE*/
+nav a, nav span {
   display: inline-block;
   font-size: 2rem;
+  height: 3rem;
+  line-height: 1.7;
   text-transform: uppercase;
   text-decoration: none;
   color: black;
 }
 
-nav form {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  height: 100%;
-  padding: 0 2em;
-}
-
-input {
-  font-size: 1.6rem;
-  height: 32px;
-}
-
-input[type="search"] {
-  flex: 3;
-}
-
-input[type="submit"] {
-  flex: 1;
-  margin-left: 1rem;
-  background: #333;
-  border: 0;
-  color: white;
-}
 
 /* || main layout */
 
