--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
+@charset "utf-8";
+/* CSS Document */
+
+/* || General setup */
+
 html, body {
   margin: 0;
   padding: 0;
@@ -46,17 +51,39 @@ p, li {
   line-height: 1.5;
 }
 
-/* || header layout HERE*/
+/* || header layout */
 
-nav, article, aside, footer {
+header {
+  margin-bottom: 10px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+body > * {
+  background-color: red;
+  padding: 1%;
+}
+
+main, header, nav, article, aside, footer, section {
   background-color: rgba(0,255,0,0.5);
   padding: 1%;
 }
 
+h1 {
+  flex: 5;
+  text-transform: uppercase;
+}
+
+header img {
+  display: block;
+  height: 60px;
+  padding-top: 20.15px;
+}
+
 nav {
   height: 50px;
-  display: flex;
   flex: 100%;
+  display: flex;
 }
 
 nav ul {
@@ -71,7 +98,7 @@ nav li {
   text-align: center;
   flex: 1;
 }
-/*HERE*/
+
 nav a, nav span {
   display: inline-block;
   font-size: 2rem;
@@ -80,30 +107,50 @@ nav a, nav span {
   text-transform: uppercase;
   text-decoration: none;
   color: black;
-}
 
+}
 
 /* || main layout */
 
+/* original main style
 main {
   display: flex;
-}
+} 
+ */
 
-article {
+article, section {
   flex: 4;
 }
 
 aside {
   flex: 1;
   margin-left: 10px;
-  background-color: #ff80ff;
+  padding: 1%;
 }
 
-aside li {
-  padding-bottom: 10px;
+aside a {
+  display: block;
+  float: left;
+  width: 50%;
+}
+
+aside img {
+  max-width: 100%;
 }
 
 footer {
   margin-top: 10px;
 }
 
+/* HK additions */
+
+main {
+  flex: 3;
+}
+
+.flex-container {
+  background-color: red;
+  padding: 1%;
+  display: flex;
+  flex-wrap: wrap;
+}
