--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,7 @@ p, li {
 header {
   margin-bottom: 10px;
   display: flex;
-  //flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 body > * {
@@ -82,7 +82,7 @@ header img {
 
 nav {
   height: 50px;
-  flex: 100%;
+  //flex: 100%;
   display: flex;
 }
 
@@ -99,7 +99,7 @@ nav li {
   flex: 1;
 }
 
-nav a, nav span {
+nav a {
   display: inline-block;
   font-size: 2rem;
   height: 3rem;
